[package]
name = "stellaris"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-fancy", "html", "parsing"] }
tera = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tower = "0.5"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
anyhow = "1"
thiserror = "1"
rss = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
walkdir = "2"
serde_json = "1"
eframe = "0.31"
open = "5"
